# toms-toolbox

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  TTBConfig.cmake.in  TengomConfig.cmake.in  conanfile.py  ttbConfig.cmake.in
project/android/: CMakeLists.txt  build_classes_dex.sh  conan_profile.in  copy_dep_libraries.sh  debug.keystore  download_java_deps.sh  pom.xml
project/android/gradle_proj/: build.gradle  local.properties.in
project/android/java_src/: AdManager.java  ApplicationLib.java  ConnectionManager.java  MainActivity.java  MainView.java
project/android/templates/: AndroidManifest.xml.in  AppActivity.java.in
src/: CMakeLists.txt  dummy.cpp
src/android/: AndroidManifest.xml  CMakeLists.txt  build_app.sh  cmake_tools.cmake
src/android/java_src/: ApplicationLib.java
src/android/src/: AppActivity.java  ApplicationLib.java  MainActivity.java  MainView.java
src/android/test/: CMakeLists.txt
src/core/: CMakeLists.txt  Event.hpp  EventListener.hpp  EventManager.cpp  EventManager.hpp  GBuffer.cpp  Monitor.cpp  Shader.cpp  ShaderProgram.cpp  ShaderProgram.hpp  State.cpp  State.hpp  Texture2D.cpp  VertexAttributeList.cpp  VertexAttributeList.hpp  VertexBuffer.cpp  VertexBuffer.hpp  Viewport.hpp  Window.cpp  Window.hpp  WindowEvents.hpp  WindowMode.cpp  WindowMode.hpp
src/core/sg/: InnerNode.hpp  LeafNode.hpp  Node.hpp  SceneGraph.cpp  SceneGraph.hpp
src/core/src/: Bindable.cpp  CMakeLists.txt  Context.cpp  EventManager.cpp  EventSource.cpp  GBuffer.cpp  Logger.cpp  Monitor.cpp  PNGLoader.cpp  RenderTarget.cpp  State.cpp  Texture2D.cpp  Texture3D.cpp  Viewport.cpp  ViewportBinder.cpp  Window.cpp  WindowMode.cpp  gl.cpp
src/examples/: CMakeLists.txt
src/examples/client_server/: CMakeLists.txt
src/examples/data_io/: CMakeLists.txt
src/examples/project/: CMakeLists.txt
src/math/: CMakeLists.txt  Matrix4f.cpp  Matrix4f.hpp  Quaternion.hpp  Tensor.hpp  TensorHelper.hpp  Vector.hpp
src/math/src/: Bezier.cpp  CMakeLists.txt  Matrix.cpp  Quaternion.cpp  Range.cpp  Vector.cpp  matrix_operations.cpp  trigonometry.cpp  utils.cpp  vector_operations.cpp
src/math/tests/: CMakeLists.txt  test_bezier.cpp  test_matrix.cpp  test_range.cpp  test_utils.cpp  test_vector.cpp
src/net/: CMakeLists.txt  IPacket.cpp  IPacket.hpp  Listener.cpp  Listener.hpp  OPacket.cpp  OPacket.hpp  PacketSelector.cpp  PacketSelector.hpp  Socket.cpp  Socket.hpp  SocketContainer.hpp  TCPSocket.cpp  TCPSocket.hpp
src/net/src/: BufferedWriter.cpp  CMakeLists.txt  Connection.cpp  ConnectionManager.cpp  ContextThread.cpp  ContextThread.hpp  DataCopyReader.cpp  DataReader.cpp  DataWriter.cpp  Endianess.cpp  IPacket.cpp  Listener.cpp  NetSelector.cpp  OPacket.cpp  PacketBridge.cpp  PacketSelector.cpp  Selectable.cpp  SelectableHolder.cpp  Selector.cpp  SelectorThread.cpp  SimpleSelectableHolder.cpp  Socket.cpp  TCPSocket.cpp  TcpAcceptor.cpp  TcpConnector.cpp  TimeoutWrapper.cpp  WebSocket.cpp  WriterThread.cpp
src/test/: CMakeLists.txt  Makefile
src/test/Client/: CMakeLists.txt  Client.cpp
src/test/Server/: CMakeLists.txt  Server.cpp
src/tg/core/: CMakeLists.txt  Event.hpp  EventManager.cpp  EventManager.hpp  GBuffer.cpp  GBuffer.hpp  Monitor.hpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  SlotList.hpp  State.cpp  State.hpp  Texture2D.cpp  Texture2D.hpp  Version.hpp  VertexAttributeList.cpp  VertexAttributeList.hpp  VertexBuffer.cpp  VertexBuffer.hpp  Window.cpp  Window.hpp  WindowEvents.hpp  WindowMode.cpp
src/tg/math/: CMakeLists.txt  Matrix.hpp  Matrix4f.cpp  Matrix4f.hpp  Quaternion.hpp  Range.hpp  Tensor.hpp  TensorHelper.hpp  Vector.hpp  trigonometry.hpp
src/tg/net/: CMakeLists.txt  Endianess.cpp  Endianess.hpp  IPacket.cpp  IPacket.hpp  Listener.cpp  OPacket.cpp  OPacket.hpp  PacketSelector.cpp  PacketSelector.hpp  SocketContainer.hpp  TCPSocket.cpp  TCPSocket.hpp
src/tg/tools/: CMakeLists.txt  SyncList.hpp
src/tgCore/: CMakeLists.txt  Event.hpp  EventListener.hpp  EventManager.hpp  GBuffer.cpp  GBuffer.hpp  InputEvents.hpp  Monitor.cpp  Monitor.hpp  PNGLoader.cpp  PNGLoader.hpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  SlotList.hpp  State.cpp  State.hpp  Texture2D.cpp  Texture2D.hpp  VertexAttribute.hpp  VertexAttributeList.cpp  VertexAttributeList.hpp  VertexBuffer.cpp  VertexBuffer.hpp  Window.cpp  Window.hpp  WindowEvents.hpp
src/tgCore/sg/: InnerNode.hpp  Instance.hpp  LeafNode.hpp  Modifier.hpp  Node.hpp  SceneGraph.cpp  SceneGraph.hpp
src/tgMath/: CMakeLists.txt  Matrix4f.cpp  Matrix4f.hpp  Quaternion.hpp  Vector.hpp
src/tgNet/: CMakeLists.txt  IPacket.cpp  IPacket.hpp  Listener.cpp  Listener.hpp  OPacket.cpp  OPacket.hpp  PacketSelector.cpp  PacketSelector.hpp  Socket.cpp  Socket.hpp  SocketContainer.hpp  TCPSocket.cpp  TCPSocket.hpp
src/tools/: SyncList.hpp
src/ttb/core/: CMakeLists.txt  EventListener.hpp  EventManager.cpp  EventManager.hpp  EventSource.hpp  GBuffer.cpp  GBuffer.hpp  Monitor.cpp  Monitor.hpp  RenderTarget.cpp  RenderTarget.hpp  Shader.cpp  ShaderProgram.cpp  ShaderProgram.hpp  SlotList.hpp  State.cpp  State.hpp  Texture2D.cpp  Texture2D.hpp  Texture3D.cpp  Texture3D.hpp  Version.hpp  VertexAttribute.hpp  VertexAttributeList.cpp  VertexAttributeList.hpp  VertexBuffer.cpp  VertexBuffer.hpp  Viewport.hpp  Window.cpp  Window.hpp  WindowEvents.hpp  WindowMode.cpp  shader.hpp
src/ttb/math/: CMakeLists.txt  Matrix.hpp  Matrix4f.cpp  Matrix4f.hpp  Quaternion.hpp  Range.hpp  Tensor.hpp  Vector.hpp  trigonometry.hpp
src/ttb/net/: CMakeLists.txt  Endianess.cpp  Endianess.hpp  IPacket.hpp  Listener.cpp  Listener.hpp  OPacket.hpp  PacketSelector.cpp  PacketSelector.hpp  Socket.cpp  TCPSocket.cpp  TCPSocket.hpp
src/ttb/tools/: CMakeLists.txt  SyncList.hpp
src/ui/: CMakeLists.txt
src/ui/src/: CMakeLists.txt  CombinedElement.cpp  Element.cpp  ElementParent.cpp  ElementWrapper.cpp  Extent.cpp  FitExtent.cpp  Framework.cpp  Margin.cpp  Root.cpp  WrappedElement.cpp  XmlFactory.cpp  XmlLoader.cpp  fromStringView.cpp  rapidxml.h
src/ui/tests/: CMakeLists.txt  (+3 more)
src/utils/: CMakeLists.txt
(+696 files in other folders)
