CMAKE_MINIMUM_REQUIRED( VERSION 2.6 )

PROJECT( tgMath )

# platform dependend stuff

IF( WIN32 )
    SET( CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -mwindows" )
    SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DWIN32" )
ENDIF()

SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11" )
SET( CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Bstatic -static-libgcc -static-libstdc++" )

# find source files
FILE(
    GLOB_RECURSE
    SOURCE_FILES
    ABSOLUTE ${CMAKE_CURRENT_SOURCE_DIR}
    *.cpp
)

# create executable
INCLUDE_DIRECTORIES( "${CMAKE_CURRENT_SOURCE_DIR}/.." )

ADD_LIBRARY( tgMath STATIC ${SOURCE_FILES} )
