CMAKE_MINIMUM_REQUIRED( VERSION 2.6 )

PROJECT( tgNet )

# find source files
FILE(
    GLOB_RECURSE
    SOURCE_FILES
    ABSOLUTE "${CMAKE_CURRENT_SOURCE_DIR}"
    *.cpp
)

# create executable
INCLUDE_DIRECTORIES( "${CMAKE_CURRENT_SOURCE_DIR}/.." )

ADD_LIBRARY( tgNet STATIC ${SOURCE_FILES} )

IF( WIN32 )
    TARGET_LINK_LIBRARIES(
        tgNet
        wsock32
        ws2_32 )
ENDIF()
