FIND_PACKAGE( GLEW REQUIRED )
FIND_PACKAGE( GLFW REQUIRED )
FIND_PACKAGE( OpenGL REQUIRED )

SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DGLEW_STATIC -DGL_EXT_PROTOTYPES" )

# find source files
FILE(
    GLOB_RECURSE
    SOURCE_FILES
    ABSOLUTE "${CMAKE_CURRENT_SOURCE_DIR}"
    *.cpp
)

# create library
INCLUDE_DIRECTORIES(
    ${GLFW_INCLUDE_DIR}
    ${GLEW_INCLUDE_DIR}
)

ADD_LIBRARY( tgCore STATIC ${SOURCE_FILES} )

IF( WIN32 )
    TARGET_LINK_LIBRARIES(
        tgCore
        ${GLFW_LIBRARIES}
        ${GLEW_LIBRARY}
        ${OPENGL_LIBRARIES}
    )
ELSE()
    TARGET_LINK_LIBRARIES(
        tgCore
        ${GLFW_LIBRARIES}
        ${OPENGL_LIBRARIES}
    )
ENDIF()
